<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>MedmonComes</artifactId>
	<groupId>net.comes.care</groupId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<properties>
		<tycho.version>0.15.0</tycho.version>
		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>
		<encoding>UTF-8</encoding>
		<product.id>comes.patient</product.id>
	</properties>
	<modules>
		<module>net.comes.care.common</module>
		<module>net.comes.care.entity</module>
		<module>net.comes.care.mysql.feature</module>
		<module>net.comes.care.patient</module>
		<module>net.comes.care.sensors</module>
		<module>net.comes.care.ui</module>
		<module>net.comes.care.core.feature</module>
		<module>net.comes.care.patient.feature</module>
		<module>net.comes.care.knowing.feature</module>
		<module>net.comes.care.ws</module>
		<module>net.comes.care.tests</module>
		<module>net.comes.care.site</module>
		<module>org.apache.cxf</module>
	</modules>
	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<excludeResources>
						<excludeResource>**/*.scala</excludeResource>
					</excludeResources>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<resolver>p2</resolver>
					<environments>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-p2-director-plugin</artifactId>
				<version>${tycho.version}</version>
				<executions>
					<execution>
						<id>materialize-products</id>
						<goals>
							<goal>materialize-products</goal>
						</goals>
					</execution>
					<execution>
						<id>archive-products</id>
						<goals>
							<goal>archive-products</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=256M</argLine>
					<includes>
						<include>**/*Test.*</include>
					</includes>
					<dependencies>
						<dependency>
							<type>p2-installable-unit</type>
							<artifactId>org.eclipse.equinox.ds</artifactId>
						</dependency>
					</dependencies>
				</configuration>

<!-- 
				<executions>
					<execution>
						<id>comes-tests</id>
						<phase>test</phase>
						<goals>
							<goal>test</goal>
						</goals>
					</execution>
				</executions>
-->
			</plugin>

		</plugins>
	</build>
	<repositories>
		<!-- eclipse repositories -->
		<repository>
			<id>eclipse-juno</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/releases/juno</url>
		</repository>
		<repository>
			<id>eclipse-sapphire</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/sapphire/0.5.1/repository</url>
		</repository>

		<!-- custom repositories -->
		<repository>
			<id>knowing</id>
			<layout>p2</layout>
			<url>http://repository.mukis.de/p2/knowing/0.1.6</url>
		</repository>
		<repository>
			<id>medmon</id>
			<layout>p2</layout>
			<url>http://repository.mukis.de/p2/medmon/snapshot</url>
		</repository>
		<repository>
			<id>gemini-dbaccess</id>
			<layout>p2</layout>
			<url>http://repository.mukis.de/p2/org.eclipse.gemini.dbaccess</url>
		</repository>
		<repository>
			<id>gemini-jpa-extension-di</id>
			<layout>p2</layout>
			<url>http://repository.mukis.de/p2/org.eclipse.gemini.ext.di</url>
		</repository>
		<repository>
			<id>apache-cxf-dosgi</id>
			<layout>p2</layout>
			<url>http://repository.mukis.de/p2/apache-cxf-dosgi-ri-1.3.1</url>
		</repository>
		<repository>
			<id>joda</id>
			<layout>p2</layout>
			<url>http://repository.mukis.de/p2/joda</url>
		</repository>
		<repository>
			<id>other-dependencies</id>
			<layout>p2</layout>
			<url>http://repository.mukis.de/p2/dependencies</url>
		</repository>

		<!-- scala/typesafe repositories -->
		<repository>
			<id>scala-tools.org</id>
			<name>Scala-tools Maven2 Repository</name>
			<url>http://scala-tools.org/repo-releases</url>
		</repository>
		<repository>
			<id>typesafe</id>
			<name>Typesafe Repository</name>
			<url>http://repo.typesafe.com/typesafe/releases</url>
		</repository>
		<repository>
			<id>eclipse-scala-ide</id>
			<layout>p2</layout>
			<url>http://download.scala-ide.org/releases-29/stable/site</url>
		</repository>

		<!-- additional repositories -->
		<repository>
			<id>google-guava</id>
			<name>Google Guava OSGi</name>
			<url>http://guava-osgi.googlecode.com/svn/trunk/repository</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>tycho-snapshots</id>
			<url>https://oss.sonatype.org/content/groups/public/</url>
		</pluginRepository>
	</pluginRepositories>
</project>
